--- a/src/components/PictureFrame/style.css
+++ b/src/components/PictureFrame/style.css
@@ -1,19 +1,14 @@
-    .picture__frame {
-        max-width: 100%;
-        max-height: 100%;
-    }
-
     .picture {
-        width: 160px;
-        height: 160px;
+        width: 155px;
+        height: 155px;
         border: 1px solid rgb(58, 58, 58);
         background: var(--bgLight);
-        margin-bottom: 5px;
+        margin: 0 5px 0 0;
         object-fit: cover;
     }
 
 
-    @media (min-width: 1000px) {
+    @media (min-width: 720px) {
 
         .picture {
             width: 310px;
