--- a/src/components/PictureFrame/style.css
+++ b/src/components/PictureFrame/style.css
@@ -14,6 +14,7 @@
             width: 310px;
             height: 310px;
             margin-bottom: 8px;
+            margin-right: 10px;
             transition: 0.2s ease-in-out;
         }
 
