--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
-  /* display: flex;
-  justify-content: center; */
   text-align: center;
   width: 100%;
   min-height: 100vh;
+  background: var(--bg);
 }
